# ApexAgente

./: 404.html  Pipfile  README.md  config.json  default_config.json  index.html  mkdocs.yml  pyproject.toml  requirements.txt
app/: app.py  completer.py  controller.py  data.py  main.py  model.py  prompt.py
app/classes/: CommandManager.py  CompleterManager.py  DataManager.py  ExceptionManager.py  PDFManager.py  PromptManager.py  __init__.py
app/functions/: Controller.py  File.py  __init__.py
app/gui/login/: gui.py
app/gui/main/all/: gui.py
app/gui/main/get/: gui.py
assets/stylesheets/: custom.bea7efe8.min.css  custom.bea7efe8.min.css.map
docs/: getting-started.md  index.md
docs/stylesheets/: extra.css
getting-started/: index.html
material/.overrides/: home.html  main.html
search/: search_index.json
