[tool.poetry]
name = "apexagente-gui"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "apexagente_gui"}]

[tool.poetry.dependencies]
python = "^3.10"
jsonwebtoken = "^1.0.0"
httpx = "^0.24.0"
tk = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
